chore: fix build

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,10 @@
     "@nedpals/pbf": "^1.3.2",
     "@nextui-org/react": "^2.2.9",
     "@tanstack/react-query": "latest",
-    "@trpc/client": "next",
-    "@trpc/next": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
+    "@trpc/client": "^11.0.0-next-beta.308",
+    "@trpc/next":"^11.0.0-next-beta.308",
+    "@trpc/react-query": "^11.0.0-next-beta.308",
+    "@trpc/server": "^11.0.0-next-beta.308",
     "@untitled-ui/icons-react": "^0.1.2",
     "add": "^2.0.6",
     "async-post-message": "^0.1.0",
